# edge-tts-gui

./: .gitignore  AGENTS.md  README.md  communicate.cpp  communicate.h  dialog.cpp  dialog.h  dialog.ui  edge-tts-gui.pro  xmake.lua
rust/: .gitignore  README.md  index.html  package-lock.json  package.json
rust/scripts/: compress-exe.ps1
rust/src/: main.js  style.css
rust/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  voice_list.tsv
rust/src-tauri/capabilities/: default.json
rust/src-tauri/src/: main.rs
src/: communicate.cpp  communicate.h  dashscope_tts.cpp  dashscope_tts.h  dialog.cpp  dialog.h  dialog.ui  edge-tts-gui.pro  floatingplaybutton.cpp  floatingplaybutton.h  main.cpp  resources.qrc  selectionoverlaycontroller.cpp  selectionoverlaycontroller.h  streamingprogressbar.cpp  streamingprogressbar.h  tts.cpp  tts.h
